# Space-Iguana-Dave

./: CMakeLists.txt  Makefile  README.md  game  gitignore  test_runner  vcpkg.json
data/: battle.json  endings.json  enemies.json  enemyDeaths.json  items.json  keyItems.json  mainStory.json  sharedScenes.json  story.json  weapons.json
include/: Battle.h  BattleAction.h  Boss.h  Enemy.h  Game.h  Item.h  Player.h  Scene.h  Story.h  Weapon.h
src/: Battle.cpp  BattleAction.cpp  Enemy.cpp  Game.cpp  Item.cpp  Player.cpp  Scene.cpp  Story.cpp  Weapon.cpp  main.cpp
src/helpers/: InputHelper.cpp  InputHelper.h
tests/: test_main.cpp
